Make progress on react interface

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+ 
+$primary-color: #D37147;
+$darker-color: #B55126;
+$darkest-color: #8F340D;
+$lighter-color: #F59A73;
+$lightest-color: #FFBEA3;
