--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Notes</title>
-    <%= csrf_meta_tags %>
+    <!DOCTYPE html>
+    <html>
+      <head>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <title>Notes</title>
+        <%= csrf_meta_tags %>
+        <%= javascript_pack_tag 'application' %>
+        <%#= stylesheet_pack_tag 'application' %>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+      </head>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
-</html>
+      <body>
+        <%= yield %>
+      </body>
+    </html>
