--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,21 @@
 
 
-<h1>Notes application</h1>
+<div id="main-container">
+    <div id="header">
+        <h1>Notes</h1>
+    </div>
 
-<%= link_to 'Notes', notes_path%>
+    <div id="content">
+        <%=react_component("NotesContainer") %>
+    </div>
 
-<br>
+    <div id="footer">
+        <h1>Jérémie Roy</h1>
+    </div>
+    
+</div>
 
-<%= link_to 'Create a new note', new_note_path%>
+
+<%#= link_to 'Notes', notes_path%>
+
+<%#= link_to 'Create a new note', new_note_path%>
