--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
     <html>
       <head>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <meta charset="utf-8"/>
         <title>Notes</title>
         <%= csrf_meta_tags %>
         <%= javascript_pack_tag 'application' %>
