--- a/app/assets/stylesheets/NoteEditor.scss
+++ b/app/assets/stylesheets/NoteEditor.scss
@@ -1,1 +1,46 @@
 @import 'draft-js/dist/Draft.css';
+@import './application';
+
+#note-editor-container {
+    height: 100%;
+    width: 70%;
+    background-color: $lightest-color;
+
+    button {
+        font-size: inherit;
+        color: inherit;
+        background: none;
+        border: none;
+        cursor: pointer;
+    }
+    
+    h1 {
+        margin: 2%;
+    }
+
+    hr {
+        display: block;
+        height: 1px;
+        border: 0;
+        border-top: 1px solid $darkest-color;
+        margin: 0.5em 1em;
+        margin-bottom: 1em;
+        padding: 0; 
+    }
+}
+
+#text-editor {
+    padding: 0 5%;
+    height: 100%;
+}
+
+
+::-moz-selection { /* Code for Firefox */
+    color: $lightest-color;
+    background: $darkest-color;
+}
+
+::selection {
+    color: $lightest-color;
+    background: $darkest-color;
+}
