--- a/app/assets/stylesheets/NotesContainer.scss
+++ b/app/assets/stylesheets/NotesContainer.scss
@@ -17,12 +17,8 @@
         @extend %drop-shadow;
         margin: 0 1.5%;
     }
-}
 
-#note-editor {
-    height: 100%;
-    width: 70%;
-    background-color: $lightest-color;
+    color: $darkest-color;
 }
 
 #note-list {
@@ -39,6 +35,5 @@
         height: 100%;
         width: 100%;
         margin-top: 1%;
-        //margin: 2% 0;
     }
 }
