--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,9 +4,9 @@
     <div id="header">
         <h1>Notes</h1>
     </div>
-
+    
     <div id="content">
-        <%=react_component("NotesContainer") %>
+        <%=react_component("NotesContainer", {notes: @notes}) %>
     </div>
 
     <div id="footer">
