Add saving server side, todo: handle loading

--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -25,6 +25,11 @@
         <%=form.label :text%><br>
         <%=form.text_field :text%>
     </p>
+
+    <p>
+        <%=form.label :rawtext%><br>
+        <%=form.text_field :rawtext%>
+    </p>
     <p>
         <%=form.submit%>
     </p>
