--- a/app/assets/stylesheets/NotesContainer.scss
+++ b/app/assets/stylesheets/NotesContainer.scss
@@ -26,14 +26,37 @@
     height: 100%;
     width: 23%;
     background-color: $lighter-color;
-    padding: 0 1%;
+    padding: 0 0.5%;
     padding-bottom: 0;
 
+    display: flex;
+
     >div {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        width: 100%;
-        margin-top: 1%;
+        margin: 5% 2%;
     }
+}
+
+#note-list-elements {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 80%;
+}
+
+#button-list {
+    > button{
+        background-color: $primary-color;
+        font-size: x-large;
+        border: none;
+        color: $darkest-color;
+        cursor: pointer;
+        padding: 0.1em 0.4em;
+        border-radius: 3px;
+        margin-top: 75%;
+    }
+}
+
+#button-list > button:hover {
+    background-color: $darker-color;
+    transition: all 150ms ease-in;
 }
