Start implementing redux

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
     </div>
     
     <div id="content">
-        <%=react_component("NotesContainer", {notes: @notes}) %>
+        <%=react_component("MainComponent", {notes: @notes}) %>
     </div>
 
     <div id="footer">
