--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,12 @@ $darkest-color: #8F340D;
 $lighter-color: #F59A73;
 $lightest-color: #FFBEA3;
 
+$primary-color: #5C7484;
+$darker-color: #5C7484;
+$darkest-color: #002946;
+$lighter-color: #5C7484;
+$lightest-color: #F0F0F0;
+
 *:focus {
     outline: none;
 }
