--- a/app/assets/stylesheets/NoteListElement.scss
+++ b/app/assets/stylesheets/NoteListElement.scss
@@ -3,7 +3,10 @@
 
 .note-list-element {
     @extend %drop-shadow;
-    background-color: $lightest-color;
+    background-color: transparent;
+    border: 1.4px solid $darkest-color;
+    border-color: $darkest-color;
+    border-radius: 5px;
     width: 100%;
     height: 17%;
     margin-bottom: 3%;
